# liquid-staking-program

./: .gitignore  Anchor.toml  Cargo.toml  Makefile.toml  README.md  msolPrice.results  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
liquid-staking-test-script/: index.ts  tsconfig.json
programs/marinade-forking-smart-contract/: Cargo.toml
programs/marinade-forking-smart-contract/src/: lib.rs
programs/marinade-forking-smart-contract/src/instructions/admin/: mod.rs  update_lp_token_metadata.rs  update_msol_token_metadata.rs
programs/marinade-forking-smart-contract/src/instructions/crank/: deactivate_stake.rs  merge_stakes.rs  redelegate.rs  stake_reserve.rs
programs/marinade-forking-smart-contract/src/instructions/delayed_unstake/: claim.rs
programs/marinade-forking-smart-contract/src/instructions/user/: deposit_stake_account.rs
programs/marinade-forking-smart-contract/src/state/: mod.rs
simulation/: .env  package-lock.json  package.json
tests/: 01_prerequisites.ts  02_initialize.ts  03_change_authority.ts  04_add_validator.ts  05_remove_validator.ts  06_set_validator_score.ts  07_config_validator_system.ts  08_deposit.ts  09_deposit_stake_account.ts  10_liquid_unstake.ts  11_add_liquidity.ts  12_remove_liquidity.ts  13_config_lp.ts  14_config_marinade.ts  15_order_unstake.ts  16_claim.ts  17_stake_reserve.ts  18_update_active.ts  19_update_deactivated.ts  20_deactivate_stake_error.ts  21_emergency_unstake.ts  22_partial_unstake.ts  23_merge_stakes.ts  24_redelegate.ts  25_pause.ts  26_resume.ts  27_withdraw_stake_account.ts  index.ts  (+4 more)
(+238 files in other folders)
